--- a/MVCLayout/Views/Home/Contact.cshtml
+++ b/MVCLayout/Views/Home/Contact.cshtml
@@ -15,7 +15,7 @@
         <!-- To make this form functional, sign up at-->
         <!-- https://startbootstrap.com/solution/contact-forms-->
         <!-- to get an API token!-->
-        <form id="contactForm" data-sb-form-api-token="API_TOKEN">
+        <form id="contactForm" data-sb-form-api-token="d5016f2d-8060-4f9f-827f-7ef8b230a9a2">
             <div class="row align-items-stretch mb-5">
                 <div class="col-md-6">
                     <div class="form-group">
@@ -49,10 +49,8 @@
             <!-- has successfully submitted-->
             <div class="d-none" id="submitSuccessMessage">
                 <div class="text-center text-white mb-3">
-                    <div class="fw-bolder">Form submission successful!</div>
-                    To activate this form, sign up at
-                    <br />
-                    <a href="https://startbootstrap.com/solution/contact-forms">https://startbootstrap.com/solution/contact-forms</a>
+                    <div class="fw-bolder">ได้รับข้อมูลเรียบร้อยแล้วค่ะ</div>
+                    ขอบคุณสำหรับการติดต่อ เราจะติดต่อกลับภายใน 24 ชม. ในวันทำการ
                 </div>
             </div>
             <!-- Submit error message-->
@@ -65,3 +63,7 @@
         </form>
     </div>
 </section>
+
+@section scripts {
+    <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
+}
