--- a/MVCLayout/Content/styles.css
+++ b/MVCLayout/Content/styles.css
@@ -11724,7 +11724,7 @@ header.masthead .masthead-heading {
 
 section#contact {
   background-color: #212529;
-  background-image: url("../assets/img/map-image.png");
+  background-image: url("../Content/img/map-image.png");
   background-repeat: no-repeat;
   background-position: center;
 }
