--- a/MVCLayout/Views/Home/About.cshtml
+++ b/MVCLayout/Views/Home/About.cshtml
@@ -11,7 +11,7 @@
         </div>
         <ul class="timeline">
             <li>
-                <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/1.jpg" alt="..." /></div>
+                <div class="timeline-image"><img class="rounded-circle img-fluid" src=@Url.Content("~/Content/img/about/1.jpg") alt="..." /></div>
                 <div class="timeline-panel">
                     <div class="timeline-heading">
                         <h4>2009-2011</h4>
@@ -21,7 +21,7 @@
                 </div>
             </li>
             <li class="timeline-inverted">
-                <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/2.jpg" alt="..." /></div>
+                <div class="timeline-image"><img class="rounded-circle img-fluid" src=@Url.Content("~/Content/img/about/2.jpg") alt="..." /></div>
                 <div class="timeline-panel">
                     <div class="timeline-heading">
                         <h4>March 2011</h4>
@@ -31,7 +31,7 @@
                 </div>
             </li>
             <li>
-                <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/3.jpg" alt="..." /></div>
+                <div class="timeline-image"><img class="rounded-circle img-fluid" src=@Url.Content("~/Content/img/about/3.jpg") alt="..." /></div>
                 <div class="timeline-panel">
                     <div class="timeline-heading">
                         <h4>December 2015</h4>
@@ -41,7 +41,7 @@
                 </div>
             </li>
             <li class="timeline-inverted">
-                <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/4.jpg" alt="..." /></div>
+                <div class="timeline-image"><img class="rounded-circle img-fluid" src=@Url.Content("~/Content/img/about/4.jpg") alt="..." /></div>
                 <div class="timeline-panel">
                     <div class="timeline-heading">
                         <h4>July 2020</h4>
