--- a/MVCLayout/Views/Shared/_Layout.cshtml
+++ b/MVCLayout/Views/Shared/_Layout.cshtml
@@ -4,18 +4,28 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Agency</title>
+    <!-- Favicon-->
+    <link rel="icon" type="image/x-icon" href="Content/favicon.ico" />
+    <!-- Font Awesome icons (free version)-->
+    <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
+    <!-- Google fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
+    <!-- Core theme CSS (includes Bootstrap)-->
     @Styles.Render("~/Content/css")
 </head>
 <body id="page-top">
 
     @{ Html.RenderPartial("Navigation"); }
 
-    @RenderBody()
+    <div class="mt-5">
+        @RenderBody()
+    </div>
 
     @{ Html.RenderPartial("Footer"); }
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
+
 
     @Scripts.Render("~/bundles/custom")
     @RenderSection("scripts", required: false)
